# argentum

./: .env  .gitignore  .gitlab-ci.yml  CHANGELOG  LICENSE.txt  readme.adoc  router.rs
argentum_encryption/business/: Cargo.toml  readme.adoc
argentum_encryption/business/src/: password.rs
argentum_encryption/business/src/mock/: password.rs
argentum_encryption/infrastructure/: Cargo.toml  readme.adoc
argentum_encryption/infrastructure/src/: pbkdf2.rs
argentum_encryption_business/: Cargo.toml
argentum_encryption_business/src/: lib.rs  password.rs
argentum_encryption_business/src/mock/: password.rs
argentum_event/business/: Cargo.toml  readme.adoc
argentum_log/business/: Cargo.toml  readme.adoc
argentum_log/business/src/: lib.rs
argentum_log/infrastructure/: Cargo.toml  readme.adoc
argentum_notification/business/: Cargo.toml  readme.adoc
argentum_notification/business/src/: lib.rs  mock.rs
argentum_notification/infrastructure/: Cargo.toml  readme.adoc
argentum_notification/infrastructure/src/: email_notificator.rs
argentum_notification_business/: Cargo.toml  readme.adoc
argentum_notification_business/src/: lib.rs
argentum_openapi/infrastructure/: Cargo.toml  readme.adoc
argentum_openapi/infrastructure/src/data_type/: component_ref.rs  component_type.rs  components.rs  contact.rs  external_docs.rs  info.rs  license.rs  mod.rs  obj.rs  operation.rs  parameter.rs  path.rs  reference.rs  request_body.rs  tag.rs  (+7 more)
argentum_process_modeling_business/: Cargo.toml  readme.adoc
argentum_process_modeling_business/src/: pool.rs
argentum_rest/infrastructure/: Cargo.toml  readme.adoc
argentum_rest/infrastructure/src/: di.rs  lib.rs
argentum_rest_generator/: Cargo.toml  readme.adoc
argentum_rest_generator/src/: main.rs  merge.rs
argentum_rest_generator/src/description/: mod.rs  operation.rs  path.rs  request.rs
argentum_rest_generator/src/generator/: cargo_toml_generator.rs  combiner.rs  di_generator.rs  dto_generator.rs  lib_generator.rs  mod.rs  request_generator.rs  schema_params_generator.rs
argentum_rest_generator/src/template/: mod.rs  renderer.rs
argentum_rest_generator/template/: di.hbs  router.hbs
argentum_rest_generator/template/dto/: mod.hbs  request.item.hbs  request.mod.hbs  schema.item.hbs  schema.mod.hbs  schema.params.item.hbs  schema.params.mod.hbs
argentum_rest_generator/template/server/: handler.item.hbs  handler.mod.hbs  pre_handler.hbs  router.hbs
argentum_rest_generator_app/: Cargo.toml  readme.adoc
argentum_rest_generator_app/src/: cli_params.rs  di.rs  main.rs
argentum_rest_generator_app/src/generator/: cargo_toml_generator.rs  combiner.rs  di_generator.rs  gitignore_generator.rs  lib_generator.rs  loader.rs  mod.rs  oas_yaml_generator.rs  openapi_generator.rs  readme_adoc_generator.rs
argentum_rest_generator_app/src/template/: helper.rs  mod.rs  renderer.rs
argentum_rest_generator_app/template/: cargo.toml.hbs  di.hbs  lib.hbs  readme.adoc.hbs
argentum_rest_generator_app/template/dto/: mod.hbs  operation_response_enum.item.hbs  operation_response_enum.mod.hbs  params.item.hbs  params.mod.hbs  path_params.item.hbs  path_params.mod.hbs  request.item.hbs  request.mod.hbs  response.item.hbs  response.mod.hbs  schema.item.hbs  schema.mod.hbs
argentum_rest_generator_app/template/server/: handler.item.hbs  handler.mod.hbs  mod.hbs  pre_handler.hbs  router.hbs
argentum_standard/business/: Cargo.toml  readme.adoc
argentum_standard/business/src/: lib.rs
argentum_standard/infrastructure/: Cargo.toml  readme.adoc
argentum_standard/infrastructure/src/: error.rs  lib.rs
argentum_standard_infrastructure/: Cargo.toml
argentum_standard_infrastructure/src/data_type/: unique_id.rs
argentum_user/business/: Cargo.toml  readme.adoc
argentum_user/business/src/: di.rs  lib.rs  token.rs
argentum_user/infrastructure/: Cargo.toml  readme.adoc
argentum_user/infrastructure/src/: di.rs  lib.rs
argentum_user/rest/: Cargo.toml  readme.adoc
argentum_user/rest/api-spec/: openapi.yaml
argentum_user/rest/src/: di.rs
argentum_user_account/business/: Cargo.toml  readme.adoc
argentum_user_account/business/src/: di.rs  lib.rs
argentum_user_account/infrastructure/: Cargo.toml  diesel.toml  readme.adoc  rustfmt.toml
argentum_user_account/infrastructure/src/: di.rs  lib.rs  token.rs
argentum_user_account/rest/: Cargo.toml  readme.adoc
argentum_user_account/rest/api-spec/: openapi.yaml
argentum_user_account/rest/src/: di.rs
argentum_user_account_business/: Cargo.toml  readme.adoc
argentum_user_account_business/src/: lib.rs
argentum_user_account_business/src/entity/: mod.rs
argentum_user_account_business/src/mock/: token.rs
argentum_user_account_business/src/repository/: credential_writer.rs  password_credential_repository.rs
argentum_user_account_business/src/use_case/: anonymous_registers.rs  user_authenticates_with_token.rs  user_logins_with_password.rs  user_registers_with_password.rs
argentum_user_business/: Cargo.toml  readme.adoc
argentum_user_business/src/: lib.rs  token.rs
argentum_user_business/src/entity/: anonymous_binding.rs  credential.rs  mod.rs  restore_password_token.rs  session.rs  user.rs
argentum_user_business/src/mock/: id_factory.rs  mod.rs  token.rs
argentum_user_business/src/repository/: anonymous_binding_repository.rs  credential_writer.rs  mod.rs  password_credential_checker.rs  password_credential_repository.rs  password_credential_writer.rs  restore_password_token_repository.rs  session_repository.rs  user_repository.rs
argentum_user_business/src/use_case/: anonymous_registers.rs  mod.rs  user_authenticates_with_token.rs  user_logins_with_password.rs  user_registers_with_password.rs
argentum_user_business/src/value_object/: name.rs
argentum_user_infrastructure/: Cargo.toml  readme.adoc
argentum_user_infrastructure/src/: token.rs
demo-app/: Cargo.toml
demo-app/src/: app.rs  di.rs  main.rs
demo-web-app/: Cargo.toml
demo-web-app/src/: di.rs  main.rs  web_app.rs
demo-web-app/src/api/: di.rs  main.rs
demo-web-app/src/migration/: di.rs  main.rs
(+395 files in other folders)
