[package]
name = "argentum_notification_business"
description = "Business layer of notification component"
version = "0.1.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2018"
homepage = "https://github.com/rusty-argentum/argentum"
repository = "https://github.com/rusty-argentum/argentum"
documentation = "https://github.com/rusty-argentum/argentum"
readme = "readme.adoc"

[dependencies]
argentum_standard_business = { path = "../argentum_standard_business", version = "0.1.0-dev" }
argentum_user_business = { path = "../argentum_user_business", version = "0.1.0-dev" }
thiserror = "1.0"
