[package]
name = "argentum_rest_generator_app"
description = "Argentum toolkit REST generator"
version = "0.2.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

[dependencies]
clap= {version="4.4.*", features= ["derive"]}
convert_case = "0.6.*"
handlebars = "5.0.0-beta.5"
hyper = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_yaml="0.9.*"

argentum_rest_infrastructure = { path = "../argentum_rest/infrastructure" }
argentum_openapi_infrastructure = { path = "../argentum_openapi/infrastructure" }
