[package]
name = "argentum_user_business"
description = "Business layer of user package"
version = "0.1.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2018"
homepage = "https://github.com/rusty-argentum/argentum"
repository = "https://github.com/rusty-argentum/argentum"
documentation = "https://github.com/rusty-argentum/argentum"
readme = "readme.adoc"

[dependencies]
#argentum_encryption_business = "0.1.0"
argentum_encryption_business = { path = "../argentum_encryption_business", version = "0.1.0-dev" }
argentum_standard_business = { path = "../argentum_standard_business", version = "0.1.0-dev" }
datetime = "0.5"
rand = "0.8.0"
thiserror = "1.0"
