[package]
name = "argentum_user_infrastructure"
description = "Business layer of user package"
version = "0.1.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2018"
homepage = "https://github.com/rusty-argentum/argentum"
repository = "https://github.com/rusty-argentum/argentum"
documentation = "https://github.com/rusty-argentum/argentum"
readme = "readme.adoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argentum_standard_business = { path = "../argentum_standard_business" }
argentum_user_business = { path = "../argentum_user_business" }
rand = "0.7"