[package]
name = "argentum_demo_app"
description = "Demo app of argentum toolkit"
version = "0.1.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2018"
homepage = "https://github.com/rusty-argentum/argentum"
repository = "https://github.com/rusty-argentum/argentum"
documentation = "https://github.com/rusty-argentum/argentum"
readme = "readme.adoc"

[dependencies]
#argentum_encryption_business = "0.1.0"
argentum_encryption_business = { path = "../argentum_encryption_business", version = "0.1.0-dev" }
argentum_encryption_infrastructure = { path = "../argentum_encryption_infrastructure" }
argentum_event_business = { path = "../argentum_event_business", version = "0.1.0-dev" }
argentum_standard_business = { path = "../argentum_standard_business" }
argentum_standard_infrastructure = { path = "../argentum_standard_infrastructure" }
argentum_user_business = { path = "../argentum_user_business" }
argentum_user_account_business = { path = "../argentum_user_account_business" }
argentum_user_account_infrastructure = { path = "../argentum_user_account_infrastructure" }
argentum_log_business = { path = "../argentum_log_business" }
argentum_log_infrastructure = { path = "../argentum_log_infrastructure" }
rand = "0.7"
thiserror = "1.0"
