[package]
name = "argentum_demo_app"
description = "Demo app of argentum toolkit"
version = "0.2.0"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

[dependencies]
argentum_encryption_business = { path = "../argentum_encryption/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_encryption_infrastructure = { path = "../argentum_encryption/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_event_business = { path = "../argentum_event/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_notification_business = { path = "../argentum_notification/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_notification_infrastructure = { path = "../argentum_notification/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_standard_business = { path = "../argentum_standard/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_standard_infrastructure = { path = "../argentum_standard/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_user_business = { path = "../argentum_user/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_user_account_business = { path = "../argentum_user_account/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_user_account_infrastructure = { path = "../argentum_user_account/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_log_business = { path = "../argentum_log/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_log_infrastructure = { path = "../argentum_log/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
rand = "0.8.5"
thiserror = "1.0"
lettre = "0.11.*"
