[package]
name = "argentum_demo_web_app_migration"
description = "Demo web app of argentum toolkit"
version = "0.2.1"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"


[[bin]]
name = "api"
path = "src/api/main.rs"

[[bin]]
name = "migration"
path = "src/migration/main.rs"

[dependencies]
argentum_encryption_business = { path = "../argentum_encryption/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_encryption_infrastructure = { path = "../argentum_encryption/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_event_business = { path = "../argentum_event/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_notification_business = { path = "../argentum_notification/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_notification_infrastructure = { path = "../argentum_notification/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_rest_infrastructure = { path = "../argentum_rest/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_standard_business = { path = "../argentum_standard/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_standard_infrastructure = { path = "../argentum_standard/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_user_business = { path = "../argentum_user/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_user_infrastructure = { path = "../argentum_user/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_user_rest = { path = "../argentum_user/rest", version = ">=0.2.0-dev,<0.3.0" }
argentum_user_account_business = { path = "../argentum_user_account/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_user_account_infrastructure = { path = "../argentum_user_account/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_user_account_rest = { path = "../argentum_user_account/rest", version = ">=0.2.0-dev,<0.3.0" }
argentum_log_business = { path = "../argentum_log/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_log_infrastructure = { path = "../argentum_log/infrastructure", version = ">=0.2.0-dev,<0.3.0" }

tokio = { version = "1.34.*", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.*", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "any", "chrono"] }
