[package]
name = "argentum_encryption_infrastructure"
description = "The infrastructure layer of encryption"
version = "0.1.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/rusty-argentum/argentum"
repository = "https://github.com/rusty-argentum/argentum"
documentation = "https://github.com/rusty-argentum/argentum"
readme = "readme.adoc"

[dependencies]
#argentum_encryption_business = "0.1.0"
argentum_encryption_business = { path = "../business", version = "0.1.0-dev" }
ring = "0.16.19"
data-encoding = "2.3.1"
