[package]
name = "argentum_encryption_infrastructure"
description = "The infrastructure layer of encryption"
version = "0.2.1"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"


[dependencies]
#argentum_encryption_business = "0.1.0"
argentum_encryption_business = { path = "../business", version = ">=0.2.0-dev,<0.3.0" }
ring = "0.17.*"
data-encoding = "2.4.*"
