[package]
name = "argentum_log_infrastructure"
description = "Business layer of encryption"
version = "0.1.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/rusty-argentum/argentum"
repository = "https://github.com/rusty-argentum/argentum"
documentation = "https://github.com/rusty-argentum/argentum"
readme = "readme.adoc"

[dependencies]
argentum_log_business = { path = "../business" }
chrono = "0.4.19"
ansi_term = "0.12.1"
