[package]
name = "argentum_log_infrastructure"
description = "Business layer of encryption"
version = "0.2.0"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

[dependencies]
argentum_log_business = { path = "../business", version = ">=0.2.0-dev,<0.3.0" }
chrono = "0.4.*"
ansi_term = "0.12.*"
