[package]
name = "argentum_notification_infrastructure"
description = "Infrastructure layer of notification component"
version = "0.2.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

[dependencies]
argentum_notification_business = { path = "../../argentum_notification/business", version = "0.2.0-dev" }
argentum_standard_business = { path = "../../argentum_standard/business", version = "0.2.0-dev" }
argentum_user_business = { path = "../../argentum_user/business", version = "0.2.0-dev" }
lettre = "0.11.*"
