[package]
name = "argentum_openapi_infrastructure"
description = "The infrastructure layer of REST component"
version = "0.2.0-dev.1"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_yaml="0.9.*"
