[package]
name = "argentum_standard_business"
description = "The business layer of standart component"
version = "0.1.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.4.2"
thiserror = "1.0"
rand = "0.8.0"
