[package]
name = "argentum_standard_infrastructure"
description = "The infrastructure layer of standart component"
version = "0.1.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

[dependencies]
argentum_standard_business = { path = "../business", version = "0.1.0-dev" }

diesel = { version = "2.1.*", features = [ "postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.29"
uuid = {version = "1.4.*", features = ["serde", "v4"]}
