[package]
name = "argentum_standard_infrastructure"
description = "The infrastructure layer of standart component"
version = "0.2.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

[dependencies]
argentum_standard_business = { path = "../business", version = "0.2.0-dev" }

diesel = { version = "2.1.*", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15.*"

sqlx = { version = "0.7.*", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
sqlx-postgres = { version = "0.7.*" }
tokio = { version = "1.34.*", features = ["full"] }


serde = { version = "1.0.*", features = ["derive"] }
thiserror = "1.0.*"
uuid = { version = "1.5.*", features = ["serde", "v4"] }
