[package]
name = "argentum_user_infrastructure"
description = "Business layer of user component"
version = "0.2.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argentum_standard_business = { path = "../../argentum_standard/business" }
argentum_standard_infrastructure = { path = "../../argentum_standard/infrastructure" }
argentum_user_business = { path = "../../argentum_user/business" }

chrono = { version = "0.4.*", features = ["serde"] }
derive_more = "0.99.*"
futures = "0.3.*"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.*", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "any", "chrono"] }
uuid = { version = "1.5.*", features = ["serde", "v4"] }
thiserror = "1.0"
