[package]
name = "argentum_user_rest"
description = "Argentum User component API"
version = "0.2.0-dev"
license = "BSD-3-Clause"
edition = "2021"

homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argentum_rest_infrastructure = { path = "../../argentum_rest/infrastructure", version = ">=0.2.0-dev,<0.3.0" }
argentum_standard_business = { path = "../../argentum_standard/business", version = ">=0.2.0-dev,<0.3.0" }
argentum_user_business = { path = "../../argentum_user/business", version = ">=0.2.0-dev,<0.3.0" }

async-trait = "0.1.*"
hyper = { version = "1.0.0", features = ["full"] }
erased-serde = "0.3.*"
regex = "1.10.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_valid = "0.16.*"
uuid = {version = "1.5.*", features = ["serde", "v4"]}
