[package]
name = "argentum_user_account_business"
description = "Business layer of user account component"
version = "0.2.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

[dependencies]
argentum_encryption_business = { path = "../../argentum_encryption/business", version = "0.2.0-dev" }
argentum_log_business = { path = "../../argentum_log/business" }
argentum_standard_business = { path = "../../argentum_standard/business", version = "0.2.0-dev" }
argentum_user_business = { path = "../../argentum_user/business", version = "0.2.0-dev" }
argentum_notification_business = { path = "../../argentum_notification/business", version = "0.2.0-dev" }
chrono = "0.4.*"
thiserror = "1.0.*"
