[package]
name = "argentum_user_account_infrastructure"
description = "Business layer of user account component"
version = "0.2.0-dev"
authors = ["Vital Leshchyk <VitalLeshchyk@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argentum_encryption_business = { path = "../../argentum_encryption/business" }
argentum_notification_business = { path = "../../argentum_notification/business" }
argentum_log_business = { path = "../../argentum_log/business" }
argentum_rest_infrastructure = { path = "../../argentum_rest/infrastructure" }
argentum_standard_business = { path = "../../argentum_standard/business" }
argentum_standard_infrastructure = { path = "../../argentum_standard/infrastructure" }
argentum_user_account_business = { path = "../business" }
argentum_user_account_rest = { path = "../rest" }
argentum_user_business = { path = "../../argentum_user/business" }

chrono = { version = "0.4.*", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.*", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15.0"
futures-util = "0.3.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
rand = "0.8.*"
uuid = { version = "1.5.*", features = ["serde", "v4"] }

async-trait = "0.1.*"
hyper = { version = "1.0.0", features = ["full"] }
diesel-ulid = "0.2.*"
